apps/cilium/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: fuochi-top
  namespace: cilium
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      hostname: '*.fuochi.top'
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: star-fuochi-top-tls
            namespace: cilium
            kind: Secret
            group: core
