apps/cilium/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  namespace: cilium
spec:
  hostnames:
    - hubble.fuochi.top
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: star-fuochi-top
      namespace: cilium
      sectionName: https
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: hubble-ui
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
